--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react-native-screens": "3.31.1",
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-secure-store": "~13.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
