--- a/package.json
+++ b/package.json
@@ -15,42 +15,43 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.8",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-navigation/native": "^6.1.17",
+    "expo": "~51.0.18",
     "expo-blur": "~13.0.2",
-    "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
-    "expo-splash-screen": "~0.27.4",
+    "expo-router": "~3.5.17",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-gifted-charts": "^1.4.10",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-gifted-charts": "^1.4.15",
+    "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.3.2",
-    "expo-secure-store": "~13.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "react-native-web": "~0.19.12",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.7",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.2",
+    "@types/react": "~18.2.79",
+    "@types/react-test-renderer": "^18.3.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
