--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.1.17",
-    "expo": "~51.0.18",
+    "expo": "51.0.20",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.8",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "3.5.18",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
